<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <Button android:layout_width="wrap_content" 
    	android:id="@+id/skills_new"
		android:layout_height="wrap_content" 
		android:text="@string/skills_add_skill"
		android:layout_marginRight="50dp" 
		android:layout_gravity="right" >
	</Button>
    <LinearLayout android:layout_width="match_parent" android:layout_gravity="center_horizontal" android:gravity="center_horizontal" android:layout_height="wrap_content" android:orientation="horizontal" >
	    <TextView android:text="@string/skills_skill" android:layout_gravity="center" android:gravity="center" style="@style/medium" android:layout_height="wrap_content" android:layout_width="400dp"/>
	    <TextView android:text="@string/skills_rank" android:layout_width="75dp" android:layout_height="wrap_content" android:layout_gravity="center" android:gravity="center" style="@style/medium"/>
	    <TextView android:text="@string/skills_attribut" android:layout_width="75dp" android:layout_height="wrap_content" android:layout_gravity="center" android:gravity="center"  style="@style/medium"/>
	    <TextView android:text="@string/skills_level" android:layout_gravity="center" android:gravity="center" style="@style/medium" android:layout_height="wrap_content" android:layout_width="75dp"/>
	    <TextView android:text="@string/skills_action" android:layout_gravity="center" android:gravity="center" style="@style/medium" android:layout_height="wrap_content" android:layout_width="75dp"/>
	    <TextView android:text="@string/skills_effort" android:layout_gravity="center" android:gravity="center" style="@style/medium" android:layout_height="wrap_content"  android:layout_width="75dp"/>
	    <TextView android:text="@string/skills_roll" android:layout_gravity="center" android:gravity="center" style="@style/medium" android:layout_height="wrap_content" android:layout_width="75dp"/>
    </LinearLayout>
    
	<ListView android:id="@+id/sheet_skill_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawSelectorOnTop="false">
    </ListView>
	
	<TextView android:id="@id/android:empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/skills_no_data" 
    	android:padding="8dp"/>
    
</LinearLayout>    

    



