<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.fragments.TalentsFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="1" >

        <TextView
            style="@style/medium"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/talents_talent" />

        <TextView
            style="@style/medium"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/talents_circle" />

        <TextView
            style="@style/medium"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/talents_rank" />

        <TextView
            style="@style/medium"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/talents_attribut" />

        <TextView
            style="@style/medium"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/talents_level" />

        <TextView
            style="@style/medium"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/talents_discipline" />

        <TextView
            style="@style/medium"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/talents_karma" />

        <TextView
            style="@style/medium"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/talents_action" />

        <TextView
            style="@style/medium"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/talents_effort" />

        <TextView
            style="@style/medium"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/talents_roll" />

        <TextView
            style="@style/medium"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/talents_page" />
    </LinearLayout>

    <ListView
        android:id="@+id/sheet_talent_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:drawSelectorOnTop="false" >
    </ListView>

</LinearLayout>