<?xml version="1.0" encoding="utf-8"?>

    <TableLayout  xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:id="@+id/sheet_legend" android:layout_margin="2dp"
		android:background="@android:drawable/gallery_thumb">
        
        <TableRow android:layout_width="match_parent">
            <TextView style="@style/title"
                android:layout_width="match_parent"
                android:text="@string/sheet_legend_title" 
                android:layout_span="2" android:layout_weight="5" />
        </TableRow>
        
        <TableRow android:layout_width="match_parent">
        	<TextView style="@style/medium"
			    android:text="@string/sheet_legend_total" 
			    android:layout_weight="3" />    
			<TextView style="@style/medium"
			    android:layout_weight="2"
			    android:id="@+id/sheet_legend_total" />    
        </TableRow>
        
        <TableRow android:layout_width="match_parent">
            <TextView style="@style/medium"
                android:text="@string/sheet_legend_spent" 
                android:layout_weight="3" />    
            <TextView style="@style/medium"
                android:layout_weight="2"
                android:id="@+id/sheet_legend_spent" />    
        </TableRow>
        
        <TableRow android:layout_width="match_parent">
        	<TextView style="@style/medium"
			    android:text="@string/sheet_legend_karma" 
			    android:layout_weight="3" />    
			<TextView style="@style/medium"
			    android:layout_weight="2"
			    android:id="@+id/sheet_legend_karma" />    
        </TableRow>
        
        <TableRow android:layout_width="match_parent">
        	<TextView style="@style/medium"
			    android:text="@string/sheet_legend_available" 
			    android:layout_weight="3" />    
			<TextView style="@style/medium"
			    android:layout_weight="2"
			    android:id="@+id/sheet_legend_available" />    
        </TableRow>
        
    </TableLayout>
