<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
   	android:layout_width="match_parent" android:layout_height="wrap_content"
    android:layout_margin="2dp" android:id="@+id/sheet_character" >
   
	<TableRow >
   		<TextView android:textAppearance="?android:attr/textAppearanceLarge"
		    android:layout_height="wrap_content"
		    android:text="@string/sheet_infos_title" android:gravity="center_horizontal"
		    android:layout_span="2" android:layout_weight="5"/>
   	</TableRow>
   	
    <TableRow android:layout_width="match_parent" android:layout_height="wrap_content">
       	<TextView android:textAppearance="?android:attr/textAppearanceMedium"
		    android:layout_height="wrap_content"
		    android:text="@string/sheet_name" android:padding="2dp" android:layout_weight="2"/>
		<TextView android:textAppearance="?android:attr/textAppearanceMedium"
		    android:layout_height="wrap_content"
		    android:id="@+id/sheet_name" android:padding="2dp" android:layout_weight="3"/> 
    </TableRow>
       <TableRow android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:attr/textAppearanceMedium"
		    android:layout_height="wrap_content"
		    android:text="@string/sheet_race" android:padding="2dp" android:layout_weight="2"/>
		<TextView android:textAppearance="?android:attr/textAppearanceMedium"
		    android:layout_height="wrap_content"
		    android:id="@+id/sheet_race" android:padding="2dp" android:layout_weight="3"/> 
    </TableRow>
    <TableRow android:layout_width="match_parent" android:layout_height="wrap_content">
       	<TextView android:textAppearance="?android:attr/textAppearanceMedium"
		    android:layout_height="wrap_content"
		    android:text="@string/sheet_age" android:padding="2dp" android:layout_weight="2"/>
		<TextView android:textAppearance="?android:attr/textAppearanceMedium"
		    android:layout_height="wrap_content"
		    android:id="@+id/sheet_age" android:padding="2dp" android:layout_weight="3"/> 
    </TableRow>
    <TableRow android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:attr/textAppearanceMedium"
		    android:layout_height="wrap_content"
		    android:text="@string/sheet_sex" android:padding="2dp" android:layout_weight="2"/>
		<TextView android:textAppearance="?android:attr/textAppearanceMedium"
		    android:layout_height="wrap_content"
		    android:id="@+id/sheet_sex" android:padding="2dp" android:layout_weight="3"/> 
    </TableRow>
    <TableRow android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:attr/textAppearanceMedium"
		    android:layout_height="wrap_content"
		    android:text="@string/sheet_height" android:padding="2dp" android:layout_weight="2"/>
		<TextView android:textAppearance="?android:attr/textAppearanceMedium"
		    android:layout_height="wrap_content"
		    android:id="@+id/sheet_height" android:padding="2dp" android:layout_weight="3"/> 
    </TableRow>
    <TableRow android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:attr/textAppearanceMedium"
		    android:layout_height="wrap_content"
		    android:text="@string/sheet_weight" android:padding="2dp" android:layout_weight="2"/>
		<TextView android:textAppearance="?android:attr/textAppearanceMedium"
		    android:layout_height="wrap_content"
		    android:id="@+id/sheet_weight" android:padding="2dp" android:layout_weight="3"/> 
    </TableRow>
       
</TableLayout>
