<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center" >
    
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:padding="8dp"
        android:text="@string/popup_legend_msg" />

    <EditText
        android:id="@+id/legend_editText"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:inputType="number" >
        <requestFocus />
    </EditText>
   
    <LinearLayout android:layout_width="wrap_content" android:layout_height="60dp" android:orientation="horizontal">
        <Button android:id="@+id/popup_legend_add" android:layout_width="200dp" android:layout_height="match_parent" android:text="@string/popup_legend_button" />
        <Button android:id="@+id/popup_close" android:layout_width="200dp" android:layout_height="match_parent" android:text="@string/popup_close" />
    </LinearLayout>
</LinearLayout>
