<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center" >
    
    <TextView 
        android:layout_height="wrap_content" 
        android:layout_width="wrap_content"
	    android:textAppearance="?android:attr/textAppearanceMedium"
	    android:padding="4dp"
	    android:text="@string/popup_init_msg" />

	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:layout_gravity="center"
	    android:id="@+id/popup_init_talents" />
    
   	<LinearLayout 
   	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_gravity="center_horizontal">
	    
	    <Button android:id="@+id/popup_close" android:layout_width="250dp" android:layout_height="match_parent" android:text="@string/popup_close" />
	    <ImageButton android:id="@+id/popup_init_roll" android:layout_width="250dp" android:layout_height="wrap_content" android:src="@drawable/dice" android:contentDescription="@string/roll" />
	    
    </LinearLayout>
    
</LinearLayout>
